--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.1",
     "@react-three/csg": "^4.0.0",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
